--- a/docker/nginx/config/nginx.conf
+++ b/docker/nginx/config/nginx.conf
@@ -52,7 +52,7 @@ http {
             }
 
             location ~ \.php$ {
-                    fastcgi_pass fpm:9000;
+                    fastcgi_pass phpfpm:9000;
                     include fastcgi_params;
                     fastcgi_intercept_errors on;
                     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
