--- a/docker/nginx/docker-compose.yaml
+++ b/docker/nginx/docker-compose.yaml
@@ -15,9 +15,11 @@ services:
     volumes:
       - ${NGINX_CONFIG_DIR}/nginx.conf:/etc/nginx/nginx.conf
       - ${WORDPRESS_DIR}:/opt/www/wordpress
-  fpm:
+  phpfpm:
     container_name: dev_fpm
-    image: php:7.4-fpm
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "9000:9000"
     networks:
