--- a/docker/nginx/config/nginx.conf
+++ b/docker/nginx/config/nginx.conf
@@ -29,9 +29,9 @@ http {
 
     server {
             listen 8080;
-            server_name localhost;
+            server_name default_server;
             index index.php;
-            root /opt/www/wordpress;
+            root /var/www/html/wordpress;
 
             access_log /var/log/nginx/wordpress.access.log;
             error_log /var/log/nginx/wordpress.error.log;
