--- a/docker/nginx/docker-compose.yaml
+++ b/docker/nginx/docker-compose.yaml
@@ -9,12 +9,12 @@ services:
     image: nginx:1.23.1
     ports:
       - "80:8080"
-    restart: always
     networks:
       - dev_nginx
+    restart: always
     volumes:
       - ${NGINX_CONFIG_DIR}/nginx.conf:/etc/nginx/nginx.conf
-      - ${WORDPRESS_DIR}:/opt/www/wordpress
+      - ${WORDPRESS_DIR}:/var/www/html/wordpress
   phpfpm:
     container_name: dev_fpm
     build:
@@ -24,5 +24,6 @@ services:
       - "9000:9000"
     networks:
       - dev_nginx
+    restart: always
     volumes:
-      - ${WORDPRESS_DIR}:/opt/www/wordpress
+      - ${WORDPRESS_DIR}:/var/www/html/wordpress
