--- a/docker/nginx/config/nginx.conf
+++ b/docker/nginx/config/nginx.conf
@@ -27,6 +27,10 @@ http {
 
     client_max_body_size 100M;
 
+    upstream phpfpm {
+        server 172.20.0.1:9000;
+    }
+
     server {
             listen 8080;
             server_name default_server;
@@ -52,7 +56,7 @@ http {
             }
 
             location ~ \.php$ {
-                    fastcgi_pass phpfpm:9000;
+                    fastcgi_pass phpfpm;
                     include fastcgi_params;
                     fastcgi_intercept_errors on;
                     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
