Add comment as placeholder to add more fpm instances as needed

--- a/docker/nginx/config/nginx.conf
+++ b/docker/nginx/config/nginx.conf
@@ -28,7 +28,9 @@ http {
     client_max_body_size 100M;
 
     upstream phpfpm {
-        server 172.20.0.1:9000;
+        server 172.20.0.1:9000 max_fails=3 weight=1;
+        # Add more fpm instances are necessary.
+        # server host:9000 max_fails=3 weight=1;
     }
 
     server {
